Translations added from KDirStat CVS. create-pot and buildsystem modified according to the tutorial on TechBase.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ ADD_DEFINITIONS(-DQT3_SUPPORT)
 add_subdirectory( doc )
 add_subdirectory( src )
 add_subdirectory( icons )
+add_subdirectory( po )
