--- a/src/k4dirstat.desktop
+++ b/src/k4dirstat.desktop
@@ -12,4 +12,4 @@ Comment[de]=Verzeichnisstatistik und Platzverbrauch
 Comment[hu]=Könyvtárstatisztikák és szabad hely
 Terminal=false
 MimeType=inode/directory;
-Categories=Utility
+Categories=Utility;
