--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,8 @@ kde4_add_kcfg_files(k4dirstat_SRCS settings.kcfgc )
 
 kde4_add_executable(k4dirstat ${k4dirstat_SRCS})
 
+set_source_files_properties(kpacman.cpp kdirstatsettings.cpp kdirtreeview.cpp k4dirstat_automoc.cpp PROPERTIES COMPILE_DEFINITIONS QT3_SUPPORT)
+
 target_link_libraries(k4dirstat ${KDE4_KDEUI_LIBS} ${KDE4_KIO_LIBS}
     ${QT_QTGUI_LIBS}
     ${QT_QT3SUPPORT_LIBRARY}
