Disable Q3Support in kdirtreeview.cpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,7 +27,7 @@ kde4_add_kcfg_files(k4dirstat_SRCS settings.kcfgc )
 
 kde4_add_executable(k4dirstat ${k4dirstat_SRCS})
 
-set_source_files_properties(kdirstatsettings.cpp kdirtreeview.cpp k4dirstat_automoc.cpp PROPERTIES COMPILE_DEFINITIONS QT3_SUPPORT)
+set_source_files_properties(kdirstatsettings.cpp k4dirstat_automoc.cpp PROPERTIES COMPILE_DEFINITIONS QT3_SUPPORT)
 
 target_link_libraries(k4dirstat ${KDE4_KDEUI_LIBS} ${KDE4_KIO_LIBS}
     ${QT_QTGUI_LIBS}
