Fix the desktop-entry-lacks-keywords-entry lintian warning

--- a/src/k4dirstat.desktop
+++ b/src/k4dirstat.desktop
@@ -13,3 +13,4 @@ Comment[hu]=Könyvtárstatisztikák és szabad hely
 Terminal=false
 MimeType=inode/directory;
 Categories=Utility;
+Keywords=disk usage, file system, cleanup;
