Fix "ecm_install_icons() with no ICONS argument is deprecated"

--- a/icons/CMakeLists.txt
+++ b/icons/CMakeLists.txt
@@ -1,2 +1,7 @@
 include(ECMInstallIcons)
-ecm_install_icons( ${ICON_INSTALL_DIR}   )
+ecm_install_icons(ICONS
+                  16-apps-k4dirstat.png
+                  32-apps-k4dirstat.png
+                  48-apps-k4dirstat.png
+                  sc-apps-k4dirstat.svgz
+                  DESTINATION share/icons)
