--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,10 @@ jobs:
     - name: Build
       run: make install
 
-    - name: Install packaging tools
-      run: |
-        wget -q https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage
-        chmod a+x linuxdeployqt-continuous-x86_64.AppImage
+    #- name: Install packaging tools
+    #  run: |
+    #    wget -q https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage
+    #    chmod a+x linuxdeployqt-continuous-x86_64.AppImage
 
     - name: Package as .deb
       if: matrix.platform == 'deb'
